--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "react-router-dom": "^6.6.0",
     "tailwindcss": "^3.2.4"
   }
 }
