--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
+    "html-dom-parser": "^3.1.3",
+    "html-react-parser": "^3.0.9",
     "quill-emoji": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
