--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
     "quill-emoji": "^0.2.0",
     "react": "^18.2.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "dotenv-webpack": "^8.0.1",
     "postcss": "^8.4.20",
     "react-router-dom": "^6.6.0",
     "tailwindcss": "^3.2.4"
